# gavhari_web

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
backend/src/: main.rs
backend/src/api/: home.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/docs/: using_daisyui_standalone.md
frontend/src/: main.rs  router.rs
frontend/src/components/: header.rs
frontend/src/pages/: base.rs
frontend/static/src/css/: tailwind.css
gavhari_be/: .env  Cargo.toml  diesel.toml
gavhari_be/migrations/2025-11-19-155653-0000_create_users/: up.sql
gavhari_be/src/: main.rs  schema.rs
gavhari_be/src/auth/: dto.rs  guard.rs  mod.rs
gavhari_be/src/db/: middleware.rs  mod.rs  models.rs
gavhari_be/src/db/models/: mod.rs  users.rs
gavhari_be/src/modules/: mod.rs
gavhari_be/src/modules/users/: dto.rs  handlers.rs  mod.rs  services.rs
gavhari_fe/: Cargo.toml  Trunk.toml  index.html  output.css
gavhari_fe/src/: main.rs  routes.rs
gavhari_fe/src/api/: fetch_api.rs  mod.rs
