[package]
name = "gavhari_be"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
diesel = { version = "2", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
serde = "1.0.228"
serde_json = "1.0.145"
env_logger = "0.11.8"
actix-session = { version = "0.11.0", features = ["redis-session"] }
futures-util = "0.3.31"
uuid = { version = "1.18.1", features = ["v4"] }
chrono = "0.4.42"
argon2 = "0.5"
rand_core = "0.9"
redis = "1"
